--- a/Auth/Auth.csproj
+++ b/Auth/Auth.csproj
@@ -9,6 +9,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="UploadedResource\CommonImages\**" />
+    <Compile Remove="UploadedResource\RetailerImage\**" />
+    <Content Remove="UploadedResource\CommonImages\**" />
+    <Content Remove="UploadedResource\RetailerImage\**" />
+    <EmbeddedResource Remove="UploadedResource\CommonImages\**" />
+    <EmbeddedResource Remove="UploadedResource\RetailerImage\**" />
+    <None Remove="UploadedResource\CommonImages\**" />
+    <None Remove="UploadedResource\RetailerImage\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Atomiv.Infrastructure.FluentValidation" Version="1.0.42" />
     <PackageReference Include="AWSSDK.Core" Version="3.7.3.17" />
     <PackageReference Include="Azure.Core" Version="1.20.0" />
@@ -42,9 +53,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UploadedResource\DealerImage\" />
-    <Folder Include="UploadedResource\CommonImages\" />
-    <Folder Include="UploadedResource\RetailerImage\" />
+    <Folder Include="UploadedResource\" />
   </ItemGroup>
 
 
