document upload form inser, edit and delete  done

--- a/Auth/Auth.csproj
+++ b/Auth/Auth.csproj
@@ -53,7 +53,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UploadedResource\" />
+    <Folder Include="UploadedResource\DealerImage\" />
   </ItemGroup>
 
 
